--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,10 @@ dependencies:
   # Used later to detect if MATLAB Runtime is installed.
   win32_registry: ^1.1.3
 
+  # Vector Diagrams
+  # Used to draw 3D diagrams for GGV.
+  vector_math: ^2.1.4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
